Add home view button

--- a/app/src/main/res/layout/fragment_addedit_page.xml
+++ b/app/src/main/res/layout/fragment_addedit_page.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f98542">
+    android:background="#f98542"
+    android:weightSum="1">
 
 
 
@@ -43,12 +44,15 @@
         android:inputType="textMultiLine"
         android:ems="10"
         android:id="@+id/entry_input_note"
-        android:text="Note" />
+        android:text="Note"
+        android:layout_weight="0.9"
+        android:gravity="top"/>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal">
 
         <Button
             android:layout_width="wrap_content"
