--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -19,7 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageView"
-            android:src="@drawable/logo_med" />
+            android:src="@drawable/logo_small"
+            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
     <TextView
@@ -54,11 +55,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:text="List"
-                android:id="@+id/button"
+                android:id="@+id/list_button"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_toLeftOf="@+id/button2"
+                android:layout_toLeftOf="@+id/add_button"
                 android:layout_weight="0.5"
                 android:background="#50000000"
                 android:layout_gravity="center_horizontal" />
@@ -67,8 +68,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:text="Add"
-                android:id="@+id/button2"
-                android:layout_alignBottom="@+id/button"
+                android:id="@+id/add_button"
+                android:layout_alignBottom="@+id/list_button"
                 android:width="100dp"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
@@ -94,8 +95,8 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:text="Options"
-                android:id="@+id/button_options"
+                android:text="Settings"
+                android:id="@+id/button_settings"
                 android:layout_weight="0.5"
                 android:background="#50000000" />
         </LinearLayout>
