--- a/app/src/main/res/layout/fragment_enrty_view.xml
+++ b/app/src/main/res/layout/fragment_enrty_view.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,42 +12,36 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/title_input_text_box"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="0dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp"
-        android:text="Title"
-        android:layout_weight="1" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/title"
+                android:layout_weight="0.5" />
 
-        <Spinner
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/cat_dropdown"
-        android:layout_weight="1"
-            android:spinnerMode="dropdown" />
-</LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/date_time"
+                android:layout_weight="0.5" />
+
+        </LinearLayout>
 
 
     </RelativeLayout>
 
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:id="@+id/entry_input_note"
-        android:text="Note"
-        android:layout_weight="0.9"
-        android:gravity="top"/>
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/textView3"
+        android:layout_weight="0.95" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -57,7 +52,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Save"
+            android:text="Edit"
             android:id="@+id/Edit_button"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
@@ -67,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel"
-            android:id="@+id/cancel_button"
+            android:id="@+id/cancel_button_edit"
             android:layout_alignTop="@+id/Edit_button"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
