--- a/app/src/main/res/layout/fragment_enrty_view.xml
+++ b/app/src/main/res/layout/fragment_enrty_view.xml
@@ -20,6 +20,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:id="@+id/enrty_id"
+                android:visibility="gone" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:id="@+id/title"
                 android:layout_weight="0.5" />
