--- a/app/src/main/res/layout/fragment_list_page.xml
+++ b/app/src/main/res/layout/fragment_list_page.xml
@@ -7,7 +7,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/entry_list"
+        android:id="@android:id/list"
         android:choiceMode="singleChoice"
         android:textColor="#000000"/>
 </LinearLayout>
